Добавил meta description

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ОбмеНЯШКИ</title>
-    </head>
 
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/app/main.tsx"></script>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ОбмеНЯШКИ</title>
+    <meta name="description" content="«Обменяшки» — отдавайте ненужное, находим полезное! Бесплатный обмен вещами для экономии и заботы о природе. Одежда, техника, книги — присоединяйтесь! «Обменяшки» — бесплатно обменивайтесь одеждой, книгами, техникой! Экономьте, сокращайте отходы и помогайте природе. Присоединяйтесь к сообществу осознанного потребления!">
+</head>
+
+<body>
+    <div id="root"></div>
+    <script type="module" src="/src/app/main.tsx"></script>
+</body>
+
 </html>
