--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ОбмеНЯШКИ</title>
-    <meta name="description" content="«Обменяшки» — отдавайте ненужное, находим полезное! Бесплатный обмен вещами для экономии и заботы о природе. Одежда, техника, книги — присоединяйтесь! «Обменяшки» — бесплатно обменивайтесь одеждой, книгами, техникой! Экономьте, сокращайте отходы и помогайте природе. Присоединяйтесь к сообществу осознанного потребления!">
+    <meta name="description"
+        content="«Обменяшки» — отдавайте ненужное, находим полезное! Бесплатный обмен вещами для экономии и заботы о природе. Одежда, техника, книги — присоединяйтесь! «Обменяшки» — бесплатно обменивайтесь одеждой, книгами, техникой! Экономьте, сокращайте отходы и помогайте природе. Присоединяйтесь к сообществу осознанного потребления!">
 </head>
 
 <body>
